style.css
/* General Styles */
body {
  background-color: whitesmoke;
  color: #333333;
  transition: background-color 0.4s, color 0.4s;
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
}

h2{
    color: #017371;
    font-size: 48px;
    margin-bottom: 10px;
    margin-left: 25px;
}

/* Dark mode */
.dark-mode {
  background-color: #333333;
  color: whitesmoke;
  
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
}
/* Header */
header {
    background-color: #017371;
    border: var(--parent);
    display:flex;
    flex-direction: row;
    padding-left: 25px;
    padding-right: 25px;
    justify-content: space-between;;
}

.header-left {
  border: var(--child);
  display: flex;
  flex-direction: column;
  row-gap: 10px;
}

.header-left .profile{
    margin-top: -20px;
    padding-bottom: 10px;
}

.dark-mode-toggle{
    margin-left: -15px;
    padding-bottom: 25px;;
}
.dark-mode-toggle .switch{
  float: left;
  margin-top: 10px; 
 }

.dark-mode-toggle .switch{
  position: relative;
  display: inline-block;
  width: 50px;
  height: 24px;
  margin-left: 10px;
}

.dark-mode-toggle .switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.dark-mode-toggle .slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  transition: 0.4s;
  border-radius: 24px;
  
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 0.5px;
}

.dark-mode-toggle .slider::before {
  position: absolute;
  content: "";
  height: 24px;
  width: 24px;
  left: 0.01px;
  bottom: 0.01px;
  background-color: white;
  transition: 0.4s;
  border-radius: 50%;
}

/* When checked */
.dark-mode-toggle input:checked + .slider{
  background-color: #333333;
}

/* Move the circle when checked */
.dark-mode-toggle input:checked + .slider::before {
  transform: translateX(26px);
}

.dark-mode-toggle .icon{
  width: 18px;
  height: 18px;
  margin-left: 3px;
  margin-right: 3px; 
}

.dark-mode-toggle input:not(:checked) + .slider .sun{
  opacity: 0.9;
}

.dark-mode-toggle input:not(:checked) + .slider .moon{
  opacity: 0.1;
}

.dark-mode-toggle input:checked + .slider .moon{
  opacity: 0.7;
}

.dark-mode-toggle input:checked + .slider .sun{
  opacity: 0.3;
}


.contact-info {
  display: flex;
  align-items: center;
  margin-top: 10px;
}
.contact-info img {
  width: 30px;
  height: 30px;  
  margin-right: 10px;
}

.header-right {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  row-gap: 10px;
}

.header-right .topdiv {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  column-gap: 10px;
}

.topmenu {
  color: whitesmoke;
  margin: 10px;
  padding: 2px;
  font-size: 15px;
  text-decoration:none;
  transition: transform 0.3s ease-in-out;
}

.topmenu:hover {
  color: white;
  font-weight: bolder;
  text-decoration: underline;
  transform: scale(1.25);
  /* Add the styles here */
}

/* Main Content */
main {
    display: flex;
    flex-direction: column;
}

/* About Me Section */
.about-me {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  column-gap: 20px;
  padding: 20px;
}
.profile-img img {
  position: sticky;
  display: flex;
  justify-content: center;
   width: 400px;
  border: 12px outset #017371; 
  box-shadow: 0 3px 10px gray;
}

.about-me-text {
  flex: 2;
  font-size: 20px;
  line-height: 1.6;
}

.about-me-text h1 {
  color: #017371;
  font-size: 36px;
  margin-bottom: 20px;
}

/* Skills Section*/

.all_skills {
  display: flex;
  flex-direction: row;
  flex-flow: wrap;
  flex: 1 1 auto;
}

.skill {
  border: 2px solid gray;
  display: block;
  background-color: rgba(128, 128, 128, 0.36);
  border-radius: 6px;
  text-align: center;
  margin: 30px;
  padding: 10px;
  width: 200px;
  font-size: 20px;
  box-shadow: 0 3px 10px gray;
  transition: transform 0.3s ease-in-out;
}

.skill:hover{
    transform: scale(1.5);
}

.skill img {
  height: 55px;
  align-items: center;
}


.skills h6 {
  align-items: center;
  font-size: 15px;
  margin-block-start: 50px;
  margin-block-end: 50px;
  font-weight: bold;
  
} 

.skills p {
  align-items: center;
  font-size: 15px;
  margin-block-start: 5px;
  margin-block-end: 5px;
} 

.flex_center {
  display: flex;
  align-items: center;
  justify-content: center;
}

